refator: rename area to interval; add keywords and description

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="中国福利彩票快乐8数据统计">
+  <meta name="keywords" content="快乐8数据统计，快乐8数据分析，快乐8开奖数据，快乐8号码统计，快乐8冷热区域分析，快乐8开奖号码重复率">
   <title>快乐8</title>
 </head>
 
