--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>快乐8</title>
 </head>
 
-<body class="bg-background">
+<body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
